@@ -1,3 +1,5 @@
+2007-12-30
+"MyWord" finished the ChooseBook function
 2007-12-29
 "MyWord" added the BookList class
 
